<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginTop="?attr/actionBarSize">

    <EditText
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/passwordBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:autofillHints="">
    </EditText>

    <EditText
        app:layout_constraintTop_toBottomOf="@id/passwordBox"
        android:id="@+id/portBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/portHint"
        android:inputType="number"
        android:autofillHints="">
    </EditText>

    <ToggleButton
        android:id="@+id/enableServiceBtn"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/disableServiceTest"
        android:textOn="@string/enableServiceText"
        app:layout_constraintTop_toBottomOf="@id/portBox">
    </ToggleButton>

    <ToggleButton
        android:id="@+id/showPassword"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/hidePassword"
        android:textOn="@string/showPassword"
        app:layout_constraintTop_toBottomOf="@id/enableServiceBtn">
    </ToggleButton>

</androidx.constraintlayout.widget.ConstraintLayout>